mp10/nightly.txt
Compilation Results:
********************
sparsemat.c: In function ‘add_tuples’:
sparsemat.c:43:9: error: ‘retmat’ undeclared (first use in this function)
  return retmat;
         ^
sparsemat.c:43:9: note: each undeclared identifier is reported only once for each function it appears in
sparsemat.c: In function ‘mult_tuples’:
sparsemat.c:49:12: error: ‘retmat’ undeclared (first use in this function)
     return retmat;
            ^
sparsemat.c: In function ‘add_tuples’:
sparsemat.c:44:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
sparsemat.c: In function ‘mult_tuples’:
sparsemat.c:51:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [sparsemat.o] Error 1

load_tuples test: 10 pts total

gv_tuples test: 6 pts total

set_tuples test: 6 pts 

0
Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2022-04-14_12:19:37
